tests/fail/missing_brackets.rs
fn main() {
    sscanf::scanf!("hi", "asdf", usize, u32);
}
